--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     
   </head>
   <body>
@@ -17,7 +17,7 @@
           <div class="item-1">
             <div class="oslomet-logo">
               <p>
-              <img class="oslomet-logo" src="../img/oslomet-logo-black.svg" 
+              <img class="oslomet-logo" src="./img/oslomet-logo-black.svg" 
               alt="oslomet-logo">
               </p>
             </div>
@@ -43,7 +43,7 @@
         <!-- Photo Grid -->
         <div class="column">
           <div class="image-studiestart">
-            <img class="studiestart" src="../img/studiestart-foto.jpg" 
+            <img class="studiestart" src="./img/studiestart-foto.jpg" 
             alt="bilde-studiestart" style="width:100%">
           </div>
         </div>
