--- a/campus.html
+++ b/campus.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <title>
+      DATA1200 - Hjemmeeksamen høst 2023 - Gruppe 24
+    </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./css/main.css">
+  </head>
+  <body>
+    
+  </body>
 </html>
