--- a/campus.html
+++ b/campus.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
-    
+    <div>
+      <div class="banner">
+        <div class="grid-1">
+          <div class="item-1">
+            <div class="oslomet-logo">
+              <p>
+              <img class="oslomet-logo" src="./img/oslomet-logo-black.svg" 
+              alt="oslomet-logo">
+              </p>
+            </div>
+          </div>
   </body>
 </html>
