--- a/campus.html
+++ b/campus.html
@@ -16,5 +16,17 @@
         </p>
       </div>
     </div>
+    <div class="grid-5">
+      <div class="main-heading">
+        <h2>
+          Våre studiesteder
+        </h2>
+      </div>
+      <div class = "grid-7">
+        <p class="info-om-begge-campus">
+          OsloMet har studiesteder både i Oslo og på Kjeller ved Lillestrøm. Vår største campus ligger sentralt i Oslo 
+          ved Bislett, og campusen på Kjeller er lett tilgjengelig med kollektivtransport fra Oslo sentrum og Oslo lufthavn. 
+        </p>
+      </div>
   </body>
 </html>
