--- a/campus.html
+++ b/campus.html
@@ -28,5 +28,80 @@
           ved Bislett, og campusen på Kjeller er lett tilgjengelig med kollektivtransport fra Oslo sentrum og Oslo lufthavn. 
         </p>
       </div>
+
+      <div class="innledning-checkbox">
+        <input type="checkbox" id="title-1" />
+        <label for="title-1">
+        <div class = grid-8>
+          <img class="campus-pilestredet" src="/img/pilestredet-campus.jpeg" alt="OsloMet campus Pilestredet sett fra Frydenlund-området">
+          <h2 class="campusnavn">
+            Campus Pilestredet
+          </h2>
+          <p class="campus-info">
+            Universitetets største studiested ligger i Pilestredet sentralt i Oslo.
+          </p>
+        </div>
+        </label>
+        <div class="content">
+          <p class="campus-info">
+            En rekke av bygningene ligger i det tradisjonsrike Frydenlund-området ved Bislett. Der man tidligere 
+            kunne kjenne duften av malt og humle fra et av de største ølbryggeriene i landet, finner du nå 
+            undervisningsrom, universitetsbibliotek, lesesaler og kantiner.
+          </p>
+          <p class="campus-info">
+            I nærheten finner du flere av bygningene til universitetet i Pilestredet Park, der det tidligere 
+            Rikshospitalet, og universitetes største bygg: Ellen Gleditschs hus i Pilestredet 35.
+          </p>
+          <p class="campus-info">
+            OsloMet sine bygg i Pilestredet har trimrom, klatrevegg og gymsaler som studenter og lærere kan 
+            benytte seg av, også på fritiden. Vi har også velferdslokale for studenter med blant annet en kro.
+          </p>
+          <p class="campus-info">
+            I Pilestredet har vi studenttorg og infosenter på fakultetene for studentene våre. Hovedresepsjonen 
+            vår ligger i Clara Holsts hus i Pilestredet 46.
+          </p>
+          <h3 class="adresse">
+            Adresse
+          </h3>
+          <p class="adresse-universitetet">
+            Pilestredet 32 - 52, 0167 Oslo
+          </p>
+        </div>
+      </div>
+
+      <div class="innledning-checkbox">
+        <input type="checkbox" id="title-1" />
+        <label for="title-1">
+          <img class="campus-Kjeller" src="/img/kjeller-campus.jpeg" alt="OsloMet campus Kjeller">
+          <h2 class="campusnavn">
+            Campus Kjeller
+          </h2>
+          <p class="campus-info">
+            Studiested Kjeller befinner seg i landlige omgivelser ved Lillestrøm.
+          </p>
+        </label>
+        <div class="content">
+          <p class="info-om-campus">
+            Studiested Kjeller befinner seg i landlige omgivelser ved Lillestrøm. Byggets arkitektur gjenspeiler en 
+            moderne kunnskapsbedrift. Det er høyt under taket, og store vindusflater slipper lyset inn. 
+          </p>
+          <p class="info-om-campus">
+            I sentrum av bygget, på øverste plan, troner biblioteket som en høyborg av kunnskap. Derfra ser du rett ned 
+            i kaffebaren, der studenter og ansatte sitter på barkrakker og tar seg en velfortjent pust i bakken. Du ser 
+            også bokhandelen Akademika.
+          </p>
+          <p class="info-om-campus">
+            Området mellom Gardermoen og Oslo er regnet å være det største vekstområdet i 
+            landet når det gjelder bosetting og næringsliv. Lillestrøm ligger midt i smørøyet for utviklingen, og er 
+            sentralt plassert med rundt ti minutter reisetid fra Oslo lufthavn og Oslo sentrum
+          </p>
+          <h3 class="adresse">
+            Adresse
+          </h3>
+          <p class="adresse-universitetet">
+            Kunnskapsveien 55, 2007 Kjeller
+          </p>
+        </div>
+      </div>
   </body>
 </html>
