--- a/topical.html
+++ b/topical.html
@@ -7,13 +7,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     <div class="banner">
       <div class="banner-content">
         <p>
-          <img class="oslomet-logo" src="../img/oslomet-logo-black.svg" alt="oslomet-logo-black"> 
+          <img class="oslomet-logo" src="./img/oslomet-logo-black.svg" alt="oslomet-logo-black"> 
         </p>
       </div>
     </div>
@@ -100,8 +100,9 @@
         </p>
       </div>
     </div>
-    <div>
+    <div class="checkbox">
       <input type="checkbox" id="title-2" />
+    </div>
       <label for="title-2">
         <h2 class="forkunnskap">
           Forkunnskapskrav
@@ -115,6 +116,7 @@
     </div>
     <div>
       <input type="checkbox" id="title-3" />
+    
       <label for="title-3">
         <h2 class="Læringsutbytte">
           Læringsutbytte
