Endre campus.html og CSS
Endre campus.html og CSS

--- a/campus.html
+++ b/campus.html
@@ -30,10 +30,12 @@
       </div>
 
       <div class="innledning-checkbox">
-        <input type="checkbox" id="title-1" />
-        <label for="title-1">
+        <input type="checkbox" id="title-4" />
+        <label for="title-4">
         <div class = grid-8>
+          <div class="grid-9">
           <img class="campus-pilestredet" src="/img/pilestredet-campus.jpeg" alt="OsloMet campus Pilestredet sett fra Frydenlund-området">
+          </div>
           <h2 class="campusnavn">
             Campus Pilestredet
           </h2>
@@ -70,8 +72,8 @@
       </div>
 
       <div class="innledning-checkbox">
-        <input type="checkbox" id="title-1" />
-        <label for="title-1">
+        <input type="checkbox" id="title-5" />
+        <label for="title-5">
           <img class="campus-Kjeller" src="/img/kjeller-campus.jpeg" alt="OsloMet campus Kjeller">
           <h2 class="campusnavn">
             Campus Kjeller
