add dropdown menu

--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
         <div class="oslomet-logo">
           <img src="./img/oslomet-logo-black.svg">
         </div>
-        <div class="link-1">
-          <button>
-            Side 2
+        <div class="dropdown">
+          <button class="dropdown-button">
+            Meny
           </button>
+          <div class="dropdown-content">
+            <a href="#">
+              Infoside: DAPE1400 Programmering
+            </a>
+            <a href="#">
+              OsloMet: Våre studiesteder
+            </a>
+            <a href="#">
+              Accessibility
+            </a>
+          </div>
         </div>
-        <div class="link-2">
-          <button>
-            Side 3
-          </button>
-        </div>
-        <div class="link-3">
-          <button>
-            Accessibility
-          </button>
-        </div>
-      </div>
+    </div>
       <div class="heading-container">
         <div class="heading">
           <h1>
