--- a/campus.html
+++ b/campus.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <div class="banner">
+    <div class="banner-container">
       <div class="banner-content">
         <p>
           <img class="oslomet-logo" src="./img/oslomet-logo-black.svg" alt="oslomet-logo-black"> 
@@ -25,7 +25,6 @@
           Våre studiesteder
         </h2>
       </div>
-      <div class = "grid-8">
         <p class="info-om-begge-campus">
           OsloMet har studiesteder både i Oslo og på Kjeller ved Lillestrøm. Vår største campus ligger sentralt i Oslo 
           ved Bislett, og campusen på Kjeller er lett tilgjengelig med kollektivtransport fra Oslo sentrum og Oslo lufthavn. 
