--- a/topical.html
+++ b/topical.html
@@ -1,200 +1,157 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
   <head>
-    <title>
-      DATA1200 - Hjemmeeksamen høst 2023 - Gruppe 24
-    </title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DATA1200 - Hjemmeeksamen høst 2023 - Gruppe 24</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
   </head>
   <body>
-    <div class="banner">
-      <div class="banner-content">
-        <p>
-          <img class="oslomet-logo" src="./img/oslomet-logo-black.svg" alt="oslomet-logo-black"> 
-        </p>
+    <div class="banner-container">
+      <div class="oslomet-logo">
+        <img src="./img/oslomet-logo-black.svg" />
       </div>
-    </div>
-  <div class="grid-5">
-    <div class="main-heading">
-      <h2>
-        DAPE1400 Programmering
-      </h2>
-    </div>
-     <div>
-      <p class="emne">
-        Emneplan
-      </p>
-    </div>
-    <div class="grid-6">
-          <div class="grid-item">
-            <div class="coursename-english">
-              <div class="heading-coursename-english">
-                <h4>
-                  Engelsk emnenavn
-                </h4>
-              </div>
-              <div class="english-name">
-                <p>
-                  Programming
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="studyprogram">
-              <div class="studieprogram">
-                <h4>
-                  Studieprogram
-                </h4>
-              </div>
-              <div>
-                <p>
-                  Bachelorstudium i ingeniørfag - data / Bachelorstudium i informasjonsteknologi / Bachelorstudium i anvendt datateknologi 
-                  / Bachelorstudium i ingeniørfag - matematisk modellering og datavitenskap / Årsstudium i IT
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="points">
-              <div class="omfang">
-                <h4>
-                  Omfang
-                </h4>
-              </div>
-              <div class="studypoints">
-                10 stp.
-              </div>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="study-years">
-              <div class="studieår">
-                <h4>
-                  Studieår
-                </h4>
-              </div>
-              <div class="years">
-                2023/2024
-              </div>
-            </div>
-          </div>
+      <div class="dropdown">
+        <button class="dropdown-button">Meny</button>
+        <div class="dropdown-content">
+          <a href="#"> Infoside: DAPE1400 Programmering </a>
+          <a href="#"> OsloMet: Våre studiesteder </a>
+          <a href="#"> Accessibility </a>
         </div>
       </div>
     </div>
+    <div class="grid-5">
+      <div class="main-heading">
+        <h2>DAPE1400 Programmering</h2>
+      </div>
+      <div>
+        <p class="emne">Emneplan</p>
+      </div>
     </div>
+    <div class="grid-6">
+      <div class="grid-item">
+        <div class="coursename-english">
+          <div class="heading-coursename-english">
+            <h4>Engelsk emnenavn</h4>
+          </div>
+          <div class="english-name">
+            <p>Programming</p>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="studyprogram">
+          <div class="studieprogram">
+            <h4>Studieprogram</h4>
+          </div>
+          <div>
+            <p>
+              Bachelorstudium i ingeniørfag - data / Bachelorstudium i
+              informasjonsteknologi / Bachelorstudium i anvendt datateknologi /
+              Bachelorstudium i ingeniørfag - matematisk modellering og
+              datavitenskap / Årsstudium i IT
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="points">
+          <div class="omfang">
+            <h4>Omfang</h4>
+          </div>
+          <div class="studypoints">10 stp.</div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="study-years">
+          <div class="studieår">
+            <h4>Studieår</h4>
+          </div>
+          <div class="years">2023/2024</div>
+        </div>
+      </div>
+    </div>
+
     <div class="innledning-checkbox">
       <input type="checkbox" id="title-1" />
       <label for="title-1">
-        <h2 class="innledning">
-          Innledning
-        </h2>
+        <h2 class="innledning">Innledning</h2>
       </label>
       <div class="content">
         <p>
-          Dette emnet skal gi studenten grunnleggende forståelse og ferdigheter innen imperative 
-          programmeringsprinsipper og objekt-orientert programmering.
+          Dette emnet skal gi studenten grunnleggende forståelse og ferdigheter
+          innen imperative programmeringsprinsipper og objekt-orientert
+          programmering.
         </p>
       </div>
     </div>
     <div class="checkbox">
       <input type="checkbox" id="title-2" />
-    </div>
+
       <label for="title-2">
-        <h2 class="forkunnskap">
-          Forkunnskapskrav
-        </h2>
+        <h2 class="forkunnskap">Forkunnskapskrav</h2>
       </label>
       <div class="content">
-        <p>
-          Ingen ut over opptakskrav.
-        </p>
+        <p>Ingen ut over opptakskrav.</p>
       </div>
     </div>
     <div>
       <input type="checkbox" id="title-3" />
-    
+
       <label for="title-3">
-        <h2 class="Læringsutbytte">
-          Læringsutbytte
-        </h2>
+        <h2 class="Læringsutbytte">Læringsutbytte</h2>
       </label>
       <div class="content">
         <div class="list-learning-outcomes">
           <div>
             <p>
-              Etter å ha gjennomført dette emne har studenten følgende læringsutbytte definert i kunnskap, 
-              ferdigheter og generell kompetanse:
+              Etter å ha gjennomført dette emne har studenten følgende
+              læringsutbytte definert i kunnskap, ferdigheter og generell
+              kompetanse:
             </p>
           </div>
           <div>
-            <h3>
-              Kunnskap
-            </h3>
+            <h3>Kunnskap</h3>
             <ul>
               <li>
-                Studenten kjenner til grunnleggende konsepter innen programmering, med fokus på prosedyre-orientert og objekt-orientert 
-                programmering. Selv om studenten kan primært programmere i Java, så forventes det at studenten kan overføre sine kunnskaper til 
-                andre imperative programmeringsspråk.
+                Studenten kjenner til grunnleggende konsepter innen
+                programmering, med fokus på prosedyre-orientert og
+                objekt-orientert programmering. Selv om studenten kan primært
+                programmere i Java, så forventes det at studenten kan overføre
+                sine kunnskaper til andre imperative programmeringsspråk.
               </li>
             </ul>
           </div>
           <div>
-            <h3>
-              Ferdigheter
-            </h3>
+            <h3>Ferdigheter</h3>
             <ul>
               <p>
-                Studenten kan håndtere følgende programmeringskonstruksjoner i Java:
+                Studenten kan håndtere følgende programmeringskonstruksjoner i
+                Java:
               </p>
-              <li>
-                Operatorer og typer
-              </li>
-              <li>
-                Kontrollstrukturer
-              </li>
-              <li>
-                Funksjoner (prodsedyrer) og metoder
-              </li>
-              <li>
-                Tabeller (arrayer)
-              </li>
-              <li>
-                Klasser, konstruktører, og referanser
-              </li>
-              <li>
-                Arv og polymorfisme
-              </li>
-              <li>
-                Enkle grafiske brukergrensesnitt
-              </li>
+              <li>Operatorer og typer</li>
+              <li>Kontrollstrukturer</li>
+              <li>Funksjoner (prodsedyrer) og metoder</li>
+              <li>Tabeller (arrayer)</li>
+              <li>Klasser, konstruktører, og referanser</li>
+              <li>Arv og polymorfisme</li>
+              <li>Enkle grafiske brukergrensesnitt</li>
             </ul>
           </div>
           <div>
-            <h3>
-              Generell kompetanse
-            </h3>
-            <p>
-              Studenten kjenner til: 
-            </p>
+            <h3>Generell kompetanse</h3>
+            <p>Studenten kjenner til:</p>
             <ul>
-              <li>
-                grunnleggende prinsipper for oppbygging av programmer
-              </li>
+              <li>grunnleggende prinsipper for oppbygging av programmer</li>
               <li>
                 sammenhengen mellom programmeringsspråk og programutvikling
               </li>
-              <li>
-                konsepter relatert til kvalitet og lesbarhet av kode
-              </li>
+              <li>konsepter relatert til kvalitet og lesbarhet av kode</li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-  </div>
   </body>
 </html>
