--- a/topical.html
+++ b/topical.html
@@ -153,5 +153,19 @@
         </div>
       </div>
     </div>
+    <div class="footer">
+      <footer>
+        <p>
+          All informasjon på denne siden er hentet fra
+          <a class="kildelink" href="https://www.oslomet.no/om/studiesteder"
+            >OsloMet våre studiestader</a
+          >.
+        </p>
+        <p class="forfattere">Forfattere er: Iselin , Mads og Benedicte</p>
+        <p class="eksamen">
+          Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
