add links to dropdown menu

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             Meny
           </button>
           <div class="dropdown-content">
-            <a href="#">
+            <a href="topical.html">
               Infoside: DAPE1400 Programmering
             </a>
-            <a href="#">
+            <a href="campus.html">
               OsloMet: Våre studiesteder
             </a>
             <a href="#">
@@ -178,6 +178,21 @@
         </p>
       </div>
       <div class="empty"></div>
+    </div>
+    <div class = "footer">  
+      <footer>
+        <p>
+          All informasjon på denne siden er hentet fra <a class= "kildelink" href="https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet">
+            OsloMet: "Dette er OsloMet"
+          </a>.
+        </p>
+        <p class="forfattere">
+          Forfattere er: Iselin, Mads og Benedicte
+        </p>
+        <p class="eksamen">
+          Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
+        </p>
+      </footer>
     </div>
   </body>
 </html>
