--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <a class="original-image"
           href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/xlarge/3/5/5/3/83553-1-nor-NO/Studiestart_foto_Benjamin_A_Ward_Cropped.jpg"
           target="_blank">
-          <!-- This is the photographer -->
+          <!-- This is the photographer of the original image -->
             Foto: Benjamin A. Ward
           </a>
         </div>
