--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
       <!-- An empty div made to style the grid -->
       <div class="empty"></div>
     </div>
+    <!-- This is the container for the footer -->
     <div class = "footer">  
+      <!-- Content of the footer shows where the information is gathered from with links and names of the makers of the webpage -->
       <footer>
         <p>
           All informasjon på denne siden er hentet fra 
