add links to dropdown

--- a/topical.html
+++ b/topical.html
@@ -15,9 +15,9 @@
       <div class="dropdown">
         <button class="dropdown-button">Meny</button>
         <div class="dropdown-content">
-          <a href="#"> Infoside: DAPE1400 Programmering </a>
-          <a href="#"> OsloMet: Våre studiesteder </a>
-          <a href="#"> Accessibility </a>
+          <a href="topical.html"> Infoside: DAPE1400 Programmering </a>
+          <a href="campus.html"> OsloMet: Våre studiesteder </a>
+          <a href="accessibility.html"> Accessibility </a>
         </div>
       </div>
     </div>
