--- a/topical.html
+++ b/topical.html
@@ -15,7 +15,7 @@
       <div class="dropdown">
         <button class="dropdown-button">Meny</button>
         <div class="dropdown-content">
-          <a href="topical.html"> Infoside: DAPE1400 Programmering </a>
+          <a href="index.html"> Dette er OsloMet </a>
           <a href="campus.html"> OsloMet: Våre studiesteder </a>
           <a href="accessibility.html"> Accessibility </a>
         </div>
