Oppdater campus og CSS

--- a/campus.html
+++ b/campus.html
@@ -10,14 +10,35 @@
     <link rel="stylesheet" href="/css/campus.css">
   </head>
   <body>
-
+    <!-- This is the yellow banner at the top of the page -->
+    <!-- The code is placed into divs throughout to style our webpage more easily -->
     <div class="banner-container">
-      <div class="banner-content">
-        <p>
-          <img class="oslomet-logo" src="./img/oslomet-logo-black.svg" alt="oslomet-logo-black"> 
-        </p>
+      <div class="oslomet-logo">
+        <img src="./img/oslomet-logo-black.svg">
       </div>
-    </div>
+      <!-- This is a button styled to make it into a dropdown menu and placed inside a div -->
+      <!-- This dropdown menu links to the other pages on our website -->
+      <div class="dropdown">
+        <button class="dropdown-button">
+          Meny
+        </button>
+        <div class="dropdown-content">
+          <!-- When you click this link it will take you to a page about the subject DAPE1400 -->
+          <!-- This tag makes the "link" clickable -->
+          <a href="topical.html">
+            Infoside: DAPE1400 Programmering
+          </a>
+          <!-- When you click this link it will take you ti a page about the OsloMet campuses -->
+          <a href="index.html">
+            Dette er OsloMet
+          </a>
+          <!-- When you click this link it will take you to a page with information about the accessibility of our webpage -->
+          <a href="accessibility.html">
+            Accessibility
+          </a>
+        </div>
+      </div>
+  </div>
 
     <div class="grid-7">
       <div class="main-heading">
