Oppdater css og topical
Oppdater topical slik at footeren har riktig link til der info er hentet

--- a/topical.html
+++ b/topical.html
@@ -157,9 +157,9 @@
       <footer>
         <p>
           All informasjon på denne siden er hentet fra
-          <a class="kildelink" href="https://www.oslomet.no/om/studiesteder"
-            >OsloMet våre studiestader</a
-          >.
+          <a class="kildelink" href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1400/2022/H%C3%98ST"
+            >Studieinfo emne DAPE1400 2022 Programmering</a
+          >
         </p>
         <p class="forfattere">Forfattere er: Iselin , Mads og Benedicte</p>
         <p class="eksamen">
