Oppdater accessibility siden

--- a/accessibility.html
+++ b/accessibility.html
@@ -1,5 +1,107 @@
 <!DOCTYPE html>
-<html>
-  <head></head>
-  <body></body>
+<html lang="no">
+  <head>
+    <title>
+      DATA1200 - Hjemmeeksamen høst 2023 - Gruppe 24
+    </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/main.css">
+  </head>
+  <body>
+    <!-- This is the yellow banner at the top of the page -->
+    <!-- The code is placed into divs throughout to style our webpage more easily -->
+    <div class="banner-container">
+      <div class="oslomet-logo">
+        <img src="./img/oslomet-logo-black.svg">
+      </div>
+      <!-- This is a button styled to make it into a dropdown menu and placed inside a div -->
+      <!-- This dropdown menu links to the other pages on our website -->
+      <div class="dropdown">
+        <button class="dropdown-button">
+          Meny
+        </button>
+        <div class="dropdown-content">
+          <!-- When you click this link it will take you to a page about the subject DAPE1400 -->
+          <!-- This tag makes the "link" clickable -->
+          <a href="topical.html">
+            Infoside: DAPE1400 Programmering
+          </a>
+          <!-- When you click this link it will take you ti a page about the OsloMet campuses -->
+          <a href="index.html">
+            Dette er OsloMet
+          </a>
+          <!-- When you click this link it will take you to a page with information about the accessibility of our webpage -->
+          <a href="campus.html">
+            OsloMet: våre studiesteder
+          </a>
+        </div>
+      </div>
+  </div>
+
+<div class = "grid-9">
+  <div class="accessibility-test">
+    <h2>
+      Accessibility test for campus.html
+    </h2>
+      <div class="accessibility-test-tekst">
+        <p>
+          Accessibility testen for siden campus.html ga oss resultatene performance: % og accessibility: %. 
+          <p>
+            Når vi trykker oss videre ser vi at årsaken til scoren er:
+          </p>
+        </p>
+      </div>
+      <div class="accessibility-test-bilde">
+        <img class="accessibility-test-campus" src="" alt="Bilde av accessibility testen som ble kjørt på campus.html">
+      </div>
+    <h2>
+      Accessibility test for index.html
+    </h2>
+    <p>
+      <div class="venstre-kolonne">
+        <div class="accessibility-test-tekst">
+          <p>
+            Accessibility testen for siden index.html ga oss resultatene performance: % og accessibility: %. 
+            <p>
+              Når vi trykker oss videre ser vi at årsaken til scoren er:
+            </p>
+          </p>
+        </div>
+      </div>
+        <div class="accessibility-test-bilde">
+          <img class="" src="" alt="Bilde av accessibility testen som ble kjørt på index.html">
+        </div>
+    </p>
+    <h2>Accessibility test for topical.html</h2>
+    <p>
+      <div class="venstre-kolonne">
+        <div class="accessibility-test-tekst">
+          <p>
+            Accessibility testen for siden index.html ga oss resultatene performance: % og accessibility: %. 
+            <p>
+              Når vi trykker oss videre ser vi at årsaken til scoren er:
+            </p>
+          </p>
+        </div>
+      </div>
+      <div class="accessibility-test-bilde">
+        <img class="" src="" alt="Bilde av accessibility testen som ble kjørt på topical.html">
+      </div>
+    </p>
+  </div>
+</div>
+
+
+  <div class = "footer">  
+    <footer>
+      <p class="forfattere">
+        Forfattere er: Iselin , Mads og Benedicte
+      </p>
+      <p class="eksamen">
+        Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
+      </p>
+    </footer>
+  </div>
+  </body>
 </html>
