--- a/campus.html
+++ b/campus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
   <head>
     <title>
       DATA1200 - Hjemmeeksamen høst 2023 - Gruppe 24
@@ -7,7 +7,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/campus.css">
   </head>
   <body>
     <!-- This is the yellow banner at the top of the page -->
@@ -172,7 +171,6 @@
           </div>
         </div>
 
-      <div class = "footer">  
         <footer>
           <p>
             All informasjon på denne siden er hentet fra <a class= "kildelink" href="https://www.oslomet.no/om/studiesteder">OsloMet våre studiestader</a>.
