--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="no">
   <head>
+      <!-- This title shows up in the tab in the browser it is opened in -->
       <title>
         DATA1200 Hjemmeeksamen 2023 - Gruppe 24
       </title>
+       <!-- This gives the browser instructions on how to control the page's dimensions and scaling. -->
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
       <!-- This indicates the webpages' character encodiing-->
       <meta charset="utf-8">
       <!-- Link to CSS stylesheet -->
@@ -13,7 +16,9 @@
       <!-- This is the yellow banner at the top of the page -->
       <!-- The code is placed into divs throughout to style our webpage more easily -->
       <div class="banner-container">
+        <!-- This is the container for the logo at the lefthand side of the webpage -->
         <div class="oslomet-logo">
+          <!-- The logo is copied from: https://student.oslomet.no/o/oslomet-theme/images/oslomet-logo-black.svg -->
           <img src="./img/oslomet-logo-black.svg">
         </div>
         <!-- This is a button styled to make it into a dropdown menu and placed inside a div -->
