--- a/topical.html
+++ b/topical.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="no">
   <head>
-    <title>DATA1200 - Hjemmeeksamen høst 2023 - Gruppe 24</title>
+    <!-- This title shows up in the tab in the browser the page has been opened in -->
+    <title>
+      DATA1200 - Hjemmeeksamen høst 2023 - Gruppe 24
+    </title>
+    <!-- This indicates the webpages' character encoding -->
     <meta charset="utf-8" />
+    <!-- This gives the browser instructions on how to control the page's dimensions and scaling. -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <!-- This links to the CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
   </head>
   <body>
+    <!-- This is the yellow banner at the top of the page -->
+    <!-- The code is placed into divs throughout to style our webpage more easily -->
     <div class="banner-container">
+      <!-- This logo is copied from: https://student.oslomet.no/o/oslomet-theme/images/oslomet-logo-black.svg-->
       <div class="oslomet-logo">
+        <!-- Link to the copied logo which is located in our "img" folder -->
         <img src="./img/oslomet-logo-black.svg" />
       </div>
+      <!-- This is the container for the dropdown menu -->
+      <!-- We've used the same code for the dropdown menu for on all our pages -->
       <div class="dropdown">
-        <button class="dropdown-button">Meny</button>
+        <!-- This dropdown menu contains links to the other pages on our website -->
+        <!-- The dropdown menu is a button which we have styled as a dropdown menu-->
+        <button class="dropdown-button">
+          Meny
+        </button>
         <div class="dropdown-content">
           <a href="index.html"> Dette er OsloMet </a>
           <a href="campus.html"> OsloMet: Våre studiesteder </a>
@@ -23,7 +38,9 @@
     </div>
     <div class="grid-5">
       <div class="main-heading">
-        <h2>DAPE1400 Programmering</h2>
+        <h2>
+          DAPE1400 Programmering
+        </h2>
       </div>
       <div>
         <p class="emne">Emneplan</p>
