--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </p>
         <!-- This is a paragraph containing the makers of our webpage -->
         <p class="forfattere">
-          Forfattere er: Iselin, Mads og Benedicte
+          Forfattere er: Iselin og Benedicte
         </p>
         <!-- This discloses the reason for making the webpage -->
         <p class="eksamen">
