--- a/topical.html
+++ b/topical.html
@@ -106,7 +106,9 @@
             </h4>
           </div>
           <div class="years">
-            2023/2024
+            <p> 
+              2023/2024
+            </p>
           </div>
         </div>
       </div>
@@ -250,7 +252,7 @@
     </div>
     <!-- This is the container for the footer -->
     <div class="footer">
-      <footer class="footer-topical">
+      <footer>
         <!-- This paragraph discloses where we have gathered the information from -->
         <p>
           All informasjon på denne siden er hentet fra
