--- a/accessibility.html
+++ b/accessibility.html
@@ -96,7 +96,7 @@
   <div class = "footer">  
     <footer>
       <p class="forfattere">
-        Forfattere er: Iselin , Mads og Benedicte
+        Forfattere er: Iselin og Benedicte
       </p>
       <p class="eksamen">
         Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
