Update the main headings on all the pages
Update the main heading in all the pages, to have a coercive design

--- a/accessibility.html
+++ b/accessibility.html
@@ -39,6 +39,17 @@
       </div>
   </div>
 
+  <div class="main-heading">
+    <h1>
+      Accessibility-side
+    </h1>
+  </div>
+  <div class="sub-heading">
+    <p>
+      Vi har kjørt accessibility test gjennom lighthouse i google chrome.
+    </p>
+  </div>
+
 <div class = "grid-9">
   <div class="accessibility-test">
     <h2>
