--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <!-- This is the container for the heading and sub-heading -->
       <div class="heading-container">
-        <div class="heading">
+        <div class="main-heading">
           <h1>
             Dette er OsloMet
           </h1>
