--- a/topical.html
+++ b/topical.html
@@ -40,13 +40,13 @@
     <!-- This is the container for the heading -->
     <div class="grid-5">
       <!-- Each of the grid elements are placed in their own div -->
-      <div class="heading-topical">
+      <div class="main-heading">
         <h1>
           DAPE1400 Programmering
         </h1>
       </div>
       <div>
-        <p class="emne">
+        <p class="sub-heading">
           Emneplan
         </p>
       </div>
