--- a/campus.html
+++ b/campus.html
@@ -41,11 +41,11 @@
 
     <div class="grid-7">
       <div class="main-heading">
-        <h2>
+        <h1>
           Våre studiesteder
-        </h2>
+        </h1>
       </div>
-        <p class="info-om-begge-campus">
+        <p class="sub-heading">
           OsloMet har studiesteder både i Oslo og på Kjeller ved Lillestrøm. Vår største campus ligger sentralt i Oslo 
           ved Bislett, og campusen på Kjeller er lett tilgjengelig med kollektivtransport fra Oslo sentrum og Oslo lufthavn. 
         </p>
