Update  css and campus.html, topical.html

--- a/campus.html
+++ b/campus.html
@@ -27,7 +27,7 @@
           <a href="topical.html">
             Infoside: DAPE1400 Programmering
           </a>
-          <!-- When you click this link it will take you ti a page about the OsloMet campuses -->
+          <!-- When you click this link it will take you to a page about OsloMet -->
           <a href="index.html">
             Dette er OsloMet
           </a>
