--- a/topical.html
+++ b/topical.html
@@ -31,9 +31,15 @@
           Meny
         </button>
         <div class="dropdown-content">
-          <a href="index.html"> Dette er OsloMet </a>
-          <a href="campus.html"> OsloMet: Våre studiesteder </a>
-          <a href="accessibility.html"> Accessibility </a>
+          <a href="index.html"> 
+            Dette er OsloMet 
+          </a>
+          <a href="campus.html"> 
+            OsloMet: Våre studiesteder 
+          </a>
+          <a href="accessibility.html"> 
+            Accessibility 
+          </a>
         </div>
       </div>
     </div>
