"Clean" the code
Clean the code and take away unused classes, merge classes that style something the same way

--- a/campus.html
+++ b/campus.html
@@ -169,6 +169,7 @@
           </div>
         </div>
 
+      <div class="footer">
         <footer>
           <p>
             All informasjon på denne siden er hentet fra <a class= "kildelink" href="https://www.oslomet.no/om/studiesteder">OsloMet våre studiestader</a>.
