Remove Mads from the author list

--- a/campus.html
+++ b/campus.html
@@ -175,7 +175,7 @@
             All informasjon på denne siden er hentet fra <a class= "kildelink" href="https://www.oslomet.no/om/studiesteder">OsloMet våre studiestader</a>.
           </p>
           <p class="forfattere">
-            Forfattere er: Iselin , Mads og Benedicte
+            Forfattere er: Iselin og Benedicte
           </p>
           <p class="eksamen">
             Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
